Internal change
PiperOrigin-RevId: 753047005